Criada <table> de mensagens e concluídas getMe(), listMessages(), fetchParrotsCount()

--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,17 @@
               </div>
 
           </header>
-          <div class="messages">
+          <div class="messages" >
               <!-- <span id="messages__box"></span>-->
-              <table id="table__avatars"></table>
-              <table id="table__messages"></table>
+              <table id="messages"></table>
+              
           </div>
 
       </div>
       <div class="background">
-          <div class="background__avatar">
-              <!-- Aqui será colocado a imagem do usuário
-        <img id="avatar" />-->
+          <div id="background__avatar" class="background__avatar">
+              <!-- Aqui será colocado a imagem do usuário-->
+       <!-- <img id="avatar" />-->
           </div>
 
           <div class="background__text">
