sendMessage(), parrot() e unparrot() funcionam
Falta tratar erros

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
               <input id="text"></input>
           </div>
           <div class="background__send">
-              <img id="img__send" src="images/send_icon.jpg">
+              <img id='img__send'  src="images/send_icon.jpg">
           </div>
       </div>
   </body>
